<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_prev"
        android:orderInCategory="100"
        android:icon="@drawable/minus"
        android:title="@string/minus"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_next"
        android:orderInCategory="100"
        android:icon="@drawable/plus"
        android:title="@string/plus"
        app:showAsAction="ifRoom" />
</menu>